--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "prettier": "^2.3.2",
     "typescript": "^4.4.2",
     "typescript-plugin-css-modules": "^3.4.0"
-  }
+  },
+  "packageManager": "yarn@3.0.2"
 }
