--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "devDependencies": {
     "@buncho/builder": "^1.1.0",
-    "@buncho/eslint-config": "^1.0.0",
+    "@buncho/eslint-config": "^2.0.0",
     "@buncho/tsconfig": "^1.0.0",
     "@prettier/plugin-xml": "^1.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
     "eslint": "^7.32.0",
     "prettier": "^2.4.1",
     "typescript": "^4.4.3",
