--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "typescript": "^4.7.4"
   },
   "packageManager": "yarn@4.0.0-rc.11"
 }
