--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "private": true,
   "scripts": {
-    "start": "buncho",
+    "start": "buncho start",
     "build": "buncho build",
     "clean": "buncho clean",
     "lint": "eslint --max-warnings 0 . && prettier --check .",
@@ -19,9 +19,7 @@
     "@neetly/eslint-config": "^0.3.0",
     "@neetly/tsconfig": "^0.2.0",
     "@prettier/plugin-xml": "^2.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "buncho": "6.0.0-rc.4",
+    "buncho": "6.0.0-rc.7",
     "eslint": "^8.28.0",
     "prettier": "^2.7.1",
     "typescript": "^4.9.3"
