--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@neetly/eslint-config": "^0.3.1",
     "@neetly/tsconfig": "^0.2.0",
     "@prettier/plugin-xml": "^2.2.0",
-    "buncho": "6.0.0-rc.7",
+    "buncho": "^6.0.1",
     "eslint": "^8.28.0",
     "prettier": "^2.8.0",
     "typescript": "^4.9.3"
